(test
 (name type_check_test)
 (modules type_check_test)
 (libraries type ounit2))

(test
 (name type_coalesce_test)
 (modules type_coalesce_test)
 (libraries type ounit2))

(test
 (name type_canonicalize_test)
 (modules type_canonicalize_test)
 (libraries type ounit2))


(test
 (name type_test)
 (modules type_test)
 (libraries type ounit2))